@@ -1,5 +1,8 @@
 Gnumeric 1.12.52
 
+Morten:
+	* Attach the vertical alignment selector to the toolbar.
+
 --------------------------------------------------------------------------
 Gnumeric 1.12.51
 
